--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <title>Back To School Drive</title>
-        <script defer src='./index.js'></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-          <h1>Back To School Drive</h1>
-          <nav id='School-Menu'>
-            <ul>
-           
-            </ul>
-          </nav>
-        </header>
-        <main>
-          <div class="main-div">
-            <h2>GREETING PLACEHOLDER</h2>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.voicesofyouth.org%2Fblog%2Fschool-biased&psig=AOvVaw2d58djT5YqlcI4B8L0NQpH&ust=1596087760028000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjIo4Xh8eoCFQAAAAAdAAAAABAD">
-            <p>Thank you for joining us for our 2020 back to school drive! To ensure our students have the necessary tools needed to succeed this school year, we are asking for your help. Each school has put togeather a list of items needed for this upcoming school year. Please navigate to your childs  to take a look at supplies that are currently in need.</p>
-            <!-- <img src="assets/image-placeholder.jpg">
+  <head>
+    <title>Back To School Drive</title>
+    <script defer src="./index.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Back To School Drive</h1>
+      <nav id="School-Menu">
+        <ul></ul>
+      </nav>
+    </header>
+    <main>
+      <div class="main-div">
+        <h2>GREETING PLACEHOLDER</h2>
+        <img
+          src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.voicesofyouth.org%2Fblog%2Fschool-biased&psig=AOvVaw2d58djT5YqlcI4B8L0NQpH&ust=1596087760028000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjIo4Xh8eoCFQAAAAAdAAAAABAD"
+        />
+        <p>
+          Thank you for joining us for our 2020 back to school drive! To ensure
+          our students have the necessary tools needed to succeed this school
+          year, we are asking for your help. Each school has put togeather a
+          list of items needed for this upcoming school year. Please navigate to
+          your childs to take a look at supplies that are currently in need.
+        </p>
+        <!-- <img src="assets/image-placeholder.jpg">
 
             <form class="description">
               <textarea>Beer description goes here</textarea>
@@ -34,8 +40,8 @@
             <ul class="reviews">
               <li>Replace with actual reviews</li>
               <li>From the server</li> -->
-            <!-- </ul> -->
-          </div>
-        </main>
-      </body>
-    
+        <!-- </ul> -->
+      </div>
+    </main>
+  </body>
+</html>
