--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="main-div">
             <h2>GREETING PLACEHOLDER</h2>
             <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.voicesofyouth.org%2Fblog%2Fschool-biased&psig=AOvVaw2d58djT5YqlcI4B8L0NQpH&ust=1596087760028000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjIo4Xh8eoCFQAAAAAdAAAAABAD">
-            <p>Thank you for joining us for our 2020 back to school drive! To ensure our students have the necessary tools needed to succeed this school year, we are asking for your help. Each school has put togeather a list of items needed for this upcoming school year. Please navigate to your childs  to take a look at supplies that are currently in need.</p>
+            <p>Thank you for joining us for our 2020 back to school drive! To ensure our students have the necessary tools needed to succeed this school year, we are asking for your help. Each school has put together a list of items needed for this upcoming school year. Please navigate to your child's  to take a look at supplies that are currently in need.</p>
             <!-- <img src="assets/image-placeholder.jpg">
 
             <form class="description">
@@ -38,4 +38,4 @@
           </div>
         </main>
       </body>
-    
+</html>
